scenarios/01-simple/tls-split-port/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-split-port-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: mtls-a
      protocol: TLS
      port: 9443
      hostname: "mtls-a.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: mtls-b
      protocol: TLS
      port: 50051
      hostname: "mtls-b.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
